@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2000-05-12 14:27:06 kurasige Exp $
+$Id: History,v 1.13 2000-11-03 03:44:45 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- Nov 03 ,00 H.Kurashige (procman-V02-00-00)
+- Fixed bugs in G4ProcTblElement::operator=
+- Remove destruction of processes in G4ProcessTable::~G4ProcessTable()
+- STL migration in G4ProcessVector 
+
 - May 12 ,00 H.Kurashige (procman-V01-01-00)
 -  small bug fix in G4ProcessManager.cc
 
